# traj

./: pyproject.toml  requirements.txt
data/raw/: convert.py  syn15.csv
dp_traj_bench/: test_privtrace.py
dp_traj_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dp_traj_bench/cli/: main.py
dp_traj_bench/core/: __init__.py  logging.py  registry.py  runner.py  schema.py
dp_traj_bench/datasets/: __init__.py  io.py
dp_traj_bench/generators/: __init__.py  base.py
dp_traj_bench/generators/privtrace/: adapter.py  impl.py
dp_traj_bench/privacy/: __init__.py  attacks.py
dp_traj_bench/scripts/: smoke_check.py
dp_traj_bench/utility/: __init__.py  density_query.py
outputs/: syn15_synth.csv
tests/: test_imports.py
